--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,7 +16,8 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
-        <%= render 'favorites/favorite', book: book %>
+        <td><%= render 'favorites/favorite', book: book %></td>
+        <td>コメント数：<%= book.book_comments.count %></td>
       </tr>
     <% end %>
   </tbody>
