--- a/app/views/book_comments/_index.html.erb
+++ b/app/views/book_comments/_index.html.erb
@@ -3,8 +3,8 @@
     <% book.book_comments.each do |book_comment| %>
     <tr>
       <td>
-        <%= link_to user_path(book_comment.user) do %>
-          <%= image_tag book_comment.user.get_profile_image, size:"100×100" %><br>
+        <%= link_to(book_comment.user) do %>
+          <%= image_tag book_comment.user.get_profile_image, size:"100x100" %><br>
           <%= book_comment.user.name %>
         <% end %>
       </td>
