--- a/app/views/favorites/destroy.js.erb
+++ b/app/views/favorites/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#book_<%= @book.id %> .favorite-btn").html("<%= j(render 'favorites/favorite', book: @book) %>");
+$(".favorite-btn").html("<%= j(render 'favorites/favorite', book: @book) %>");
